--- a/HistoryConverter/packages.config
+++ b/HistoryConverter/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Be.IO" version="1.0.0" targetFramework="net452" />
   <package id="SevenZip" version="4.12.1" targetFramework="net452" />
 </packages>
